--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 		<script src="neuchart.js"></script>
 	</head>
 	<body>
-		<canvas id="barx" width="300" height="300"></canvas>
+		<canvas id="barx" width="500" height="500"></canvas>
+		<canvas id="line" width="800" height="300"></canvas>
 		<canvas id="bar" width="300" height="300"> </canvas>
 		<canvas id="radar" width="300" height="300"></canvas>
 		<canvas id="canvas" width="300" height="300"></canvas>
-		<canvas id="line" width="800" height="300"></canvas>
+		
 		
 	</body>
 	<script type="text/javascript">
@@ -26,7 +27,8 @@
 				{value:[12,94,56,78,23,86,90],name:'wz'},
 				{value:[84,70,80,75,80,60,70],name:'zjl'}
 			],
-			message:"name:{{name}}  value:{{value}} "
+			message:"name:{{name}}  value:{{value}} ",
+			title:"Radar Example"
 		}
 		var canvas=document.getElementById('radar');
 	 	var ctx=canvas.getContext('2d');
@@ -43,7 +45,8 @@
 				{value:80,name:'ss'},
 				{value:100,name:'wzddz'}
 			],
-			message:"name:{{name}} <br/> is   <br/>value:{{value}}"//npercent:{{percent}}"
+			message:"name:{{name}} <br/> is   <br/>value:{{value}}",//npercent:{{percent}}"
+			title:"Pie Example"
 		}
 		var c=new NChart(ctx,'pie').config(options).draw();
 		console.log( c instanceof Radar);
@@ -60,7 +63,8 @@
 				{value:80,name:'ss'},
 				{value:100,name:'wzddz'}
 			],
-			message:"name:{{name}} <br/>  is   <br/>value:{{value}}"//npercent:{{percent}}"
+			message:"name:{{name}} <br/>  is   <br/>value:{{value}}",
+			title:"Ring Example"
 		}
 		var cx=new NChart(ctxx,'ring').config(options1).draw();
 		//console.log( cx instanceof Bar);
@@ -69,19 +73,20 @@
 		var ctxx=canvasx.getContext('2d');
 	 	var options1={
 			data:[
-				{type:'eat',value:[43,45,87,252,28,90],name:'eat'},
-				{type:'drink',value:[55,23,21,45,64,23],name:'drink'},
-				{type:'buy',value:[110,92,231,78,329,200],name:'buy'},
-				{type:'eat',value:[80,62,23,30,41,32],name:'eat'},
-				{type:'eat',value:[120,32,43,80,51,82],name:'eat'},
-				{type:'eat',value:[99,13,78,55,59,20],name:'eat'},
-				{type:'drink',value:[219,44,22,55,77,98],name:'drink'},
-				{type:'buy',value:[11,92,231,78,39,20],name:'buy'},
-				{type:'seal',value:[40,99,21,33,32,20],name:'seal'}
+				{type:'eat',value:[43,45,87,252,28,90],name:'wzzeat'},
+				{type:'drink',value:[55,23,21,45,64,23],name:'wzzdrink'},
+				{type:'buy',value:[110,292,231,78,329,200],name:'wzzbuy'},
+				{type:'eat',value:[80,62,23,30,41,32],name:'lxceat'},
+				{type:'eat',value:[120,32,43,80,51,82],name:'ngseat'},
+				{type:'eat',value:[99,13,78,55,59,20],name:'zsxeat'},
+				{type:'drink',value:[219,44,22,55,77,98],name:'zsxdrink'},
+				{type:'buy',value:[11,92,231,78,39,20],name:'lxcbuy'},
+				{type:'seal',value:[40,99,21,33,32,20],name:'ngseal'}
 			],
 			xAxis:["1m","2m","3m","4m","5m","6m"],
 			yAxis:'T',
-			message:"name:{{name}}  is   value:{{value}}"//npercent:{{percent}}"
+			message:"name:{{name}}  is   value:{{value}}",
+			title:"Bar Example"
 		}
 		var cx1=new NChart(ctxx,'bar').config(options1).draw();
 		//console.log( cx1 instanceof Bar);
@@ -94,7 +99,9 @@
 			],	
 			name:'wzz',
 			xAxis:["1m","2m","3m","4m","5m","6m","7m","8m","9m","10m","11m","12m","13m","14m","15m","16m","17m","18m"],
-			yAxis:"HP"
+			yAxis:"HP",
+			message:"name:{{name}}  value:{{value}}",
+			title:"Line Example"
 		}
 		var canvasx=document.getElementById('line');
 		var ctxx=canvasx.getContext('2d');
