--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>	
 		
-		<script src="wtinychart.js"></script>
+		<script src="wtinychart.min.js"></script>
 	</head>
 	<body>
 		<canvas id="barx" width="350" height="400"></canvas>
